--- a/kubernetes/templates/backend-php-service.yaml
+++ b/kubernetes/templates/backend-php-service.yaml
@@ -15,5 +15,5 @@ spec:
     targetPort: 9000
   selector:
     app: backend-php-{{ .Release.Name }}
-status:
-  loadBalancer: {}
+  type: LoadBalancer
+  sessionAffinity: ClientIP
