--- a/kubernetes/templates/backend-web-deployment.yaml
+++ b/kubernetes/templates/backend-web-deployment.yaml
@@ -10,7 +10,6 @@ spec:
     type: Recreate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: backend-web-{{ .Release.Name }}
     spec:
@@ -50,7 +49,7 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: POSTGRES_DB
-              name: backend-web-env-{{ .Release.Name }}
+              name: backend-php-env-{{ .Release.Name }}
         - name: POSTGRES_HOSTNAME
           valueFrom:
             configMapKeyRef:
@@ -103,3 +102,18 @@ spec:
         persistentVolumeClaim:
           claimName: web-files-{{ .Release.Name }}
 status: {}
+{{ if .Values.GKE }}
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: backend-web-{{ .Release.Name }}
+spec:
+  maxReplicas: 5
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: extensions/v1beta1
+    kind: Deployment
+    name: backend-web-{{ .Release.Name }}
+  targetCPUUtilizationPercentage: 50
+{{ end }}
