--- a/kubernetes/templates/backend-web-service.yaml
+++ b/kubernetes/templates/backend-web-service.yaml
@@ -15,6 +15,4 @@ spec:
   selector:
     app: backend-web-{{ .Release.Name }}
   type: LoadBalancer
-  externalTrafficPolicy: Local
-status:
-  loadBalancer: {}
+  sessionAffinity: ClientIP
