--- a/kubernetes/templates/nfs-server.yaml
+++ b/kubernetes/templates/nfs-server.yaml
@@ -27,31 +27,49 @@ spec:
           privileged: true
         volumeMounts:
           - mountPath: /var/www/web/sites/default/files/
-            name: mypvc
+            name: web-files
+          - mountPath: /var/lib/postgresql/data/
+            name: db-data
       volumes:
-        - name: mypvc
+        - name: web-files
           persistentVolumeClaim:
-            claimName: regional-pvc-{{ .Release.Name }}
+            claimName: web-files-pvc-{{ .Release.Name }}
+            fsType: ext4
+        - name: db-data
+          persistentVolumeClaim:
+            claimName: db-data-pvc-{{ .Release.Name }}
             fsType: ext4
 ---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: regionalpd-storageclass-{{ .Release.Name }}
+  name: gke-storageclass-{{ .Release.Name }}
 provisioner: kubernetes.io/gce-pd
 parameters:
-  type: pd-standard
+  type: pd-ssd
   zones: europe-west2-a
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: regional-pvc-{{ .Release.Name }}
+  name: web-files-pvc-{{ .Release.Name }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 200Gi
-  storageClassName: regionalpd-storageclass-{{ .Release.Name }}
+      storage: 20Gi
+  storageClassName: gke-storageclass-{{ .Release.Name }}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: db-data-pvc-{{ .Release.Name }}
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
+  storageClassName: gke-storageclass-{{ .Release.Name }}
 {{ end }}
